@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.3
 
+	- The scheduler did not handle out-of-memory conditions properly when
+	  loading a job (STR #3407)
 	- When adding printers from the web interface, the dynamic updates of
 	  the device list made it hard to pick a device (STR #3406)
 	- Fixed a typo in the web interface admin page template (STR 3403)
